--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                             <div class="featured-block d-flex justify-content-center align-items-center">
                                 <a href="donate.html" class="d-block">
-                                    <img src="images/icons/0.png" class="featured-block-image img-fluid" alt="">
+                                    <img src="./images/icons/0.png" class="featured-block-image img-fluid" alt="">
                                     <p class="featured-block-text">Become a <strong>volunteer</strong></p>
                                 </a>
                             </div>
@@ -138,7 +138,7 @@
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-4">
                             <div class="featured-block d-flex justify-content-center align-items-center">
                                 <a href="donate.html" class="d-block">
-                                    <img src="images/icons/1.png" class="featured-block-image img-fluid" alt="">
+                                    <img src="./images/icons/1.png" class="featured-block-image img-fluid" alt="">
 
                                     <p class="featured-block-text"><strong>Caring</strong> Earth</p>
                                 </a>
@@ -148,7 +148,7 @@
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0 mb-md-4">
                             <div class="featured-block d-flex justify-content-center align-items-center">
                                 <a href="donate.html" class="d-block">
-                                    <img src="images/icons/2.png" class="featured-block-image img-fluid" alt="">
+                                    <img src="./images/icons/2.png" class="featured-block-image img-fluid" alt="">
                                     <p class="featured-block-text">Make a <strong>Donation</strong></p>
                                 </a>
                             </div>
@@ -157,7 +157,7 @@
                         <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                             <div class="featured-block d-flex justify-content-center align-items-center">
                                 <a href="donate.html" class="d-block">
-                                    <img src="images/icons/scholarship.png" class="featured-block-image img-fluid" alt="">
+                                    <img src="./images/icons/scholarship.png" class="featured-block-image img-fluid" alt="">
 
                                     <p class="featured-block-text"><strong>Scholarship</strong> Program</p>
                                 </a>
